Closed Bug 483591 Opened 17 years ago Closed 17 years ago

PRBool problem in nsIMEStateManager::IsActive

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: taras.mozilla, Assigned: smaug)

References

Details

Attachments

(1 file)

Olli Pettay <Olli.Pettay@helsinki.fi> introduced a new PRBool problem in changeset http://hg.mozilla.org/mozilla-central/rev/9088b4cee030 of nsIMEStateManager.cpp. Commit message: Bug 478245 - Crash [@ nsEventStateManager::PreHandleEvent], r+sr=dbaron Error: /content/events/src/nsIMEStateManager.cpp: 216: In macro NS_ENSURE_TRUE http://mxr.mozilla.org/mozilla-central/source/content/events/src/nsIMEStateManager.cpp#216
Oops, sorry. Will fix.
Attached patch patchSplinter Review
Assignee: nobody → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #368000 - Flags: superreview+
Attachment #368000 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: