 Bug 483591 -  PRBool problem in nsIMEStateManager::IsActive, r+sr=bz